Aplicando conhecimento da biblioteca stream pt1